Refactoring all files

--- a/mustard/CMakeLists.txt
+++ b/mustard/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_executable(cholesky_mustard cholesky_mustard.cu)
-
 add_executable(lu_mustard lu_mustard.cu)
 add_executable(p_lu_mustard lu_mustard_p.cu)
 
@@ -10,11 +9,12 @@ find_package(METIS)
 if(METIS_FOUND)
     target_link_libraries(cholesky_mustard PUBLIC METIS::METIS)
     target_link_libraries(lu_mustard PUBLIC METIS::METIS)
+    target_link_libraries(p_lu_mustard PUBLIC METIS::METIS)
 else()
     message(WARNING "METIS library not found. METIS support will be disabled.")
 endif()
 
-set(LIBS 
+set(MUSTARD_COMMON_LIBS
     CUDA::cudart
     CUDA::cublas
     CUDA::cusolver
@@ -22,17 +22,6 @@ set(LIBS
     nvshmem::nvshmem
     MPI::MPI_CXX)
 
-target_link_libraries(cholesky_mustard ${LIBS})
-target_link_libraries(lu_mustard ${LIBS})
-target_link_libraries(p_lu_mustard ${LIBS})
-
-# target_compile_options(cholesky_mustard PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
-#         -D_FORCE_INLINES
-#         >)
-
-# target_compile_options(lu_mustard PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:
-#         -D_FORCE_INLINES
-#         >)
-
-# target_include_directories(cholesky_mustard SYSTEM PRIVATE 
-#                             "${CMAKE_CURRENT_SOURCE_DIR}")
+target_link_libraries(cholesky_mustard ${MUSTARD_COMMON_LIBS})
+target_link_libraries(lu_mustard ${MUSTARD_COMMON_LIBS})
+target_link_libraries(p_lu_mustard ${MUSTARD_COMMON_LIBS} CUDA::curand)
